Bug al instertar y actualizar Expediente fixed y ahora al insertar expediente solo se muestran las escuelas activas

--- a/src/main/resources/templates/Coordinador/editExpediente.html
+++ b/src/main/resources/templates/Coordinador/editExpediente.html
@@ -132,7 +132,7 @@
                                     <option th:each="es: ${escuelas}"  th:value="${es.idEscuela}" th:text="${es.nombre}"></option>
                                 </select>
                             </div>
-                            <div><p>**Solo se muestran las escuelas del municipio de la sesion del coordinador</p> </div>
+                            <div><p>**Solo se muestran las escuelas del municipio de la sesion del coordinador y solo las escuelas activas</p> </div>
                         </div>
                     </div>
                     <div class="form-group row">
