--- a/src/main/resources/templates/Coordinador/displayMateriasCursadas.html
+++ b/src/main/resources/templates/Coordinador/displayMateriasCursadas.html
@@ -49,10 +49,10 @@
     <img src="/img/subjects128.png" width="100" height="100" class="d-inline-block align-top mr-2" alt="">
     <h1 th:text="${expediente.nombre}+' '+${expediente.apellido}" />
 </div>
-<button type="button" class="btn btn-success ml-5 mb-4 mt-2" th:href="@{/coordinador/nueva/Materia/id/}+${{expediente.idExpediente}}">
+a<a type="button" class="btn btn-success ml-5 mb-4 mt-2" th:href="@{/coordinador/nueva/Materia/id/}+${{expediente.idExpediente}}">
     <i class="fas fa-plus"></i>
     Agregar Nueva Materia
-</button>
+</a>
 <div class="container-fluid">
     <div class="d-flex flex-column justify-content-center align-items-center">
         <table class="table table-bordered table-hover">
