--- a/src/main/resources/templates/Coordinador/displayMateriasCursadas.html
+++ b/src/main/resources/templates/Coordinador/displayMateriasCursadas.html
@@ -49,7 +49,7 @@
     <img src="/img/subjects128.png" width="100" height="100" class="d-inline-block align-top mr-2" alt="">
     <h1 th:text="${expediente.nombre}+' '+${expediente.apellido}" />
 </div>
-a<a type="button" class="btn btn-success ml-5 mb-4 mt-2" th:href="@{/coordinador/nueva/Materia/id/}+${{expediente.idExpediente}}">
+<a type="button" class="btn btn-success ml-5 mb-4 mt-2" th:href="@{/coordinador/nueva/Materia/id/}+${{expediente.idExpediente}}">
     <i class="fas fa-plus"></i>
     Agregar Nueva Materia
 </a>
