--- a/src/main/resources/templates/Administrador/displayUsuarios.html
+++ b/src/main/resources/templates/Administrador/displayUsuarios.html
@@ -89,7 +89,7 @@
                     <th th:text="${usuario.apellido}"/>
                     <th th:text="${usuario.municipio.nombreMunicipio}"/>
                     <th th:text="${usuario.municipio.departamento.nombreDepartamento}"/>
-                    <th th:text="${usuario.fechaBD}"/>
+                    <th th:text="${usuario.fechaNacimientoDelegate}"/>
                     <th th:text="${usuario.edad}"/>
                     <th th:text="${usuario.direccion}"/>
                     <th th:text="${usuario.estado} ? 'Activo' : 'No activo'"/>
